# gapmm2

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  tests.yml
gapmm2/: __init__.py  __main__.py  __version__.py  align.py  utils.py
tests/: conftest.py  test_align.py  test_main.py  test_utils.py
tests/unit/: test_consensus_utrs.py
