[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gapmm2"
version = "25.4.5"
description = "gapmm2: gapped alignment using minimap2"
readme = "README.md"
authors = [
    {name = "Jon Palmer", email = "nextgenusfs@gmail.com"},
]
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Operating System :: Unix",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.6.0"
dependencies = [
    "mappy",
    "edlib",
    "natsort",
]

[project.urls]
Homepage = "https://github.com/nextgenusfs/gapmm2"
Repository = "https://github.com/nextgenusfs/gapmm2.git"

[project.scripts]
gapmm2 = "gapmm2.__main__:main"


[tool.hatch.build]
include = [
  "gapmm2/*.py",
  "README.md",
  "LICENSE.md"
]
exclude = [
  "tests/*",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''/(\n  # Directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
